--- a/style.css/main.css
+++ b/style.css/main.css
@@ -1,18 +1,21 @@
 :root {
-  --vermelho:#e50914;
-  --preta:#141414;
+  --vermelho: #e50914;
+  --preta: #141414;
 }
-*{
+* {
   margin: 0;
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
 }
+
+/* ELEMENTOS BASE */
 body {
- background: var(--preta);
- font-family: sans-serif, sans-serif;
+  background: var(--preta);
+  font-family: 'Arial', sans-serif;
+  color: white;
 }
-header .container{
+header .container {
   border: 1px solid black;
   display: flex;
   justify-content: space-between;
@@ -21,13 +24,72 @@ header .container{
 }
 header .logo {
   color: var(--vermelho);
-  font: 'Arial Black';
+  font: "Arial Black";
   font-size: 40px;
 }
-header nav a{
-  color:#aaa;
+header nav a {
+  color: #aaa;
   margin-right: 10px;
 }
-header nav a:hover{
-  color:#fff;
+header nav a:hover {
+  color: #fff;
+}
+
+/* FILME PRINCIPAL */
+.filme-principal {
+  font-size: 16px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) 100%),
+    url("https://images2.alphacoders.com/450/thumb-1920-450291.jpg");
+
+  height: 500px;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.filme-principal .descricao {
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+.titulo {
+  margin-top: 15%;
+  font-size: 40px;
+  font-family: "Trebuchet MS", Arial, sans-serif;
+}
+.botao {
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+
+  padding: 15px 30px;
+  margin-right: 15px;
+  font-size: 12px;
+
+  cursor: pointer;
+  transition: 0.8s;
+}
+.botao:hover {
+  background-color: white;
+  color: black;
+}
+.botao i {
+  margin-right: 9px;
+}
+
+.container {
+  margin-left: 20px;
+}
+
+.filme-principal .container {
+  width: 70%;
+}
+
+.box-filme{
+  margin-top: 10px;
+  height:100%;
+  width: 100%;
+  display: block;
+
 }
