netflix-clone readme final

--- a/style.css/main.css
+++ b/style.css/main.css
@@ -1,36 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans&display=swap');
+
 :root {
   --vermelho: #e50914;
   --preta: #141414;
 }
+
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  box-sizing: border-box;
 }
 
 /* ELEMENTOS BASE */
 body {
   background: var(--preta);
-  font-family: 'Arial', sans-serif;
+  font-family: 'Martel-Sans', sans-serif;
   color: white;
 }
+
 header .container {
-  border: 1px solid black;
   display: flex;
-  justify-content: space-between;
-  padding: 39px;
   align-items: center;
+  justify-content: space-between;
+  padding: 15px 25px;
+  transition: 0.3s;
 }
+
 header .logo {
   color: var(--vermelho);
   font: "Arial Black";
-  font-size: 40px;
+  font-size: 30px;
 }
+
 header nav a {
   color: #aaa;
   margin-right: 10px;
 }
+
 header nav a:hover {
   color: #fff;
 }
@@ -49,15 +55,19 @@ header nav a:hover {
   justify-content: center;
   align-items: flex-start;
 }
+
+.titulo {
+  margin-bottom: 40px;
+  margin-top: 15%;
+  font-size: 40px;
+  font-family: "Martel-Sans", sans-serif;
+}
+
 .filme-principal .descricao {
   margin-top: 10px;
   margin-bottom: 40px;
 }
-.titulo {
-  margin-top: 15%;
-  font-size: 40px;
-  font-family: "Trebuchet MS", Arial, sans-serif;
-}
+
 .botao {
   background-color: rgba(0, 0, 0, 0.5);
   border: none;
@@ -70,10 +80,12 @@ header nav a:hover {
   cursor: pointer;
   transition: 0.8s;
 }
+
 .botao:hover {
   background-color: white;
   color: black;
 }
+
 .botao i {
   margin-right: 9px;
 }
@@ -86,10 +98,10 @@ header nav a:hover {
   width: 70%;
 }
 
-.box-filme{
+.box-filme {
   margin-top: 10px;
-  height:100%;
+  height: 100%;
   width: 100%;
   display: block;
-
+  cursor: pointer;
 }
